# DES_Instrument-Cluster_team06

./: .gitignore  CAN_Communication_Guide.md  LIBRARY_MODIFICATIONS.md  LICENSE  README.md  README_old.md  controller.py  quick_run.sh  quick_start.sh  real_time_speed_monitor.py  run_instrument_cluster.sh
Design/: App.qrc  CMakeLists.txt  Design.qmlproject  Design.qmlproject.qtds  qds.cmake
Design/App/: caninterface.cpp  caninterface.h  dbusreceiver.cpp  dbusreceiver.h  main.cpp
Design/App/autogen/: environment.h
Design/Design/: Constants.qml  EventListSimulator.qml
Design/DesignContent/: App.qml  CMakeLists.txt  Constants.qml  Screen01.qml  Screen01Form.ui.qml
DesignApp-Debug/: CMakeCache.txt.prev  DesignApp
DesignApp-Debug/.cmake/api/v1/reply.prev/: cache-v2-4e03d35a437a0190ba09.json  cmakeFiles-v1-3ee8cf0521652d45824f.json  codemodel-v2-5129e42b3b7f56154621.json  codemodel-v2-963267a3b21e8abf6be2.json  directory-.-Debug-3ee54588f18b2821b38c.json  directory-Dependencies.Components.src-Debug-318317c4b9cf7685efaa.json  directory-Dependencies.Components.src.imports-Debug-e68224f9311043578082.json  directory-Dependencies.Components.src.imports.components-Debug-9eb09f1f4c512a37a7ef.json  directory-Dependencies.Components.src.imports.designeffects-Debug-beb340c0e0366ae03f67.json  directory-Dependencies.Components.src.imports.effects_qt6-Debug-3b3529484ab211be5672.json  directory-Dependencies.Components.src.imports.tools.eventsystem-Debug-5cf9caf9ced88aafb97b.json  directory-DesignContent-Debug-8901ea4b91e544f34be5.json  index-2025-08-04T12-42-14-0923.json  target-Design-Debug-b9cf9ad8e97b73b1b335.json  target-DesignApp-Debug-d512d3e23169bb23ffa9.json  target-DesignApp-Debug-e2dcab2318fa71f6d1ba.json  target-DesignApp_autogen_timestamp_deps-Debug-21245cd8aabb2d8a55be.json  target-DesignContent-Debug-2f6208f9bd74bdfd10f6.json  target-DesignContent_autogen_timestamp_deps-Debug-295f0b862a90f9c12c01.json  target-DesignContent_copy_qml-Debug-a35d71315001ce3075f1.json  target-DesignContent_qmllint-Debug-4f22684a15b390e5d96a.json  target-DesignContent_qmllint_json-Debug-8b6ea4ba0cf1631f3bcd.json  target-DesignContent_qmllint_module-Debug-80fae1058ffbb117e6fa.json  target-DesignContent_qmltyperegistration-Debug-60eec8ad8780e996fd28.json  target-DesignContent_resources_2-Debug-3575c37328128117016c.json  target-DesignContentplugin-Debug-4ce65cb4da1109d55b80.json  target-DesignContentplugin_autogen-Debug-5d1bd9d4993d44bdf19f.json  target-Design_autogen-Debug-e6b81b98289a7a5da3e1.json  target-Design_autogen_timestamp_deps-Debug-f823b9744b00d12b09c3.json  (+89 more)
DesignApp-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
DesignApp-Debug/.qt/deploy_qml_imports/: DesignApp.cmake
DesignApp-Debug/.qt/qml_imports/: DesignApp_build.cmake  DesignApp_build.rsp  DesignApp_conf.cmake  DesignApp_conf.rsp
DesignApp-Debug/.qt/rcc/: configuration.qrc
DesignApp-Debug/.qtc_clangd/: compile_commands.json
DesignApp-Debug/.rcc/qmlcache/: all_aotstats.aotstatslist  aotstats_empty_modules.txt
DesignApp-Debug/Design/: Designplugin_DesignPlugin.cpp  Designplugin_DesignPlugin_in.cpp  Designplugin_init.cpp  design_qmltyperegistrations.cpp
DesignApp-Debug/Design/.qt/: Design_qml.cmake  Design_res.cmake
DesignApp-Debug/Design/.qt/rcc/: Design_raw_qml_0.qrc  qmake_Design.qrc
DesignApp-Debug/Design/.rcc/qmlcache/: Design_Constants_qml.cpp  Design_Constants_qml.cpp.aotstats  Design_EventListModel_qml.cpp  Design_EventListModel_qml.cpp.aotstats  Design_EventListSimulator_qml.cpp  Design_EventListSimulator_qml.cpp.aotstats  Design_qml_loader_file_list.rsp  Design_qmlcache_loader.cpp  module_Design.aotstatslist
DesignApp-Debug/Design/.rcc/qmllint/: Design.rsp  Design_json.rsp  Design_module.rsp
DesignApp-Debug/Design/Design_autogen/: deps
DesignApp-Debug/Design/Designplugin_autogen/: deps
DesignApp-Debug/Design/Designplugin_autogen/include/: Designplugin_DesignPlugin.moc.d
DesignApp-Debug/Design/Designplugin_init_autogen/: deps
DesignApp-Debug/DesignApp_autogen/: deps
DesignApp-Debug/DesignContent/: DesignContentplugin_DesignContentPlugin.cpp  DesignContentplugin_DesignContentPlugin_in.cpp  DesignContentplugin_init.cpp  designcontent_qmltyperegistrations.cpp
DesignApp-Debug/DesignContent/.qt/: DesignContent_qml.cmake  DesignContent_res.cmake
DesignApp-Debug/DesignContent/.qt/rcc/: DesignContent_raw_qml_0.qrc  qmake_DesignContent.qrc
DesignApp-Debug/DesignContent/.rcc/qmlcache/: DesignContent_App_qml.cpp  DesignContent_App_qml.cpp.aotstats  DesignContent_Screen01.ui_qml.cpp  DesignContent_Screen01.ui_qml.cpp.aotstats  DesignContent_Screen01Form.ui_qml.cpp  DesignContent_Screen01Form.ui_qml.cpp.aotstats  DesignContent_Screen01_qml.cpp  DesignContent_Screen01_qml.cpp.aotstats  DesignContent_qml_loader_file_list.rsp  DesignContent_qmlcache_loader.cpp  module_DesignContent.aotstatslist
DesignApp-Debug/DesignContent/.rcc/qmllint/: DesignContent.rsp  DesignContent_json.rsp  DesignContent_module.rsp
DesignApp-Debug/DesignContent/DesignContent_autogen/: deps
DesignApp-Debug/DesignContent/DesignContentplugin_autogen/: deps
DesignApp-Debug/DesignContent/DesignContentplugin_autogen/include/: DesignContentplugin_DesignContentPlugin.moc.d
DesignApp-Debug/DesignContent/DesignContentplugin_init_autogen/: deps
DesignApp-Debug/qml/Design/: Design_qml_module_dir_map.qrc  EventListSimulator.qml  qmldir
DesignApp-Debug/qml/DesignContent/: App.qml  DesignContent_qml_module_dir_map.qrc  Screen01.qml  Screen01.ui.qml  Screen01Form.ui.qml  qmldir
app/src/: can_interface.py  display_controller.py  gamepads.py  main.py  vehicle_controller.py
app/src/IC/: CMakeLists.txt  caninterface.cpp  caninterface.h  main.cpp  main.qml
app/src/arduino/: arduino_velocity.ino
app/src/sender/: battery_sender.py  vehicle_controller.py
config/: can_config.ini  display_config.ini
docs/: architecture.md  development.md  hardware.md  system_architecture.md
scripts/: can_setup.sh  run_instrument_cluster.sh  setup.sh
src/: display_controller.py  main.py
test/: test_can.py
tests/: test_can.py
(+293 files in other folders)
